data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_649.wast
;; 10. **`br_if` Combination with `br`:**     - A `br_if` followed by an unconditional `br`. Ensure the `br_if` correctly evaluates the condition and the unconditional `br` is honored regardless.     - Constraint Checked: Interaction between conditional and unconditional branches.     - Relation: Tests clarity in distinguishing between conditional and unconditional instructions.

(assert_invalid
  (module (func $br_if_combination_with_br
    (block
      (br_if 0 (i32.const 0))
      (br 0 (nop))
    )
  ))
  "type mismatch"
)